--- a/4bia.html
+++ b/4bia.html
@@ -10,15 +10,15 @@
 
   <head>
 
-    <link href='https://raw.githack.com/Neasreyka/Admin-logo/main/jw%202.0.8.css' rel='stylesheet'/> 
+    <link href='https://raw.githack.com/Neasreyka/Admin-logo/main/jw%202.0.8.csshttps://raw.githack.com/Neasreyka/Admin-logo/main/jw%202.0.8.css' rel='stylesheet'/> 
 
-	<title>KHBOXHD.COM</title>
+	<title>KHMER7HD</title>
 
 	</head>
 
 <body>
 
-  <script src='https://raw.githack.com/Neasreyka/Admin-logo/main/khbox%20v2.0.6.js' type='text/javascript'></script>
+  <script src='https://raw.githack.com/Neasreyka/LogoUser/main/barang%20v2.0.6.js' type='text/javascript'></script>
 
   <style>
 
@@ -94,9 +94,9 @@
 
     {
 
-      title: "khboxhd.com",
+      title: "KHMER7HD",
 
-      description: "ភាពយន្តនេះនាំមកជូនដោយ khboxhd.com",
+      description: "ភាពយន្តនេះនាំមកជូនដោយ KHMER7HD & KH7HD",
 
       image: "",
 
