--- a/4bia.html
+++ b/4bia.html
@@ -10,7 +10,7 @@
 
   <head>
 
-    <link href='https://raw.githack.com/Neasreyka/Admin-logo/main/jw%202.0.8.csshttps://raw.githack.com/Neasreyka/Admin-logo/main/jw%202.0.8.css' rel='stylesheet'/> 
+    <link href='https://raw.githack.com/Neasreyka/Admin-logo/main/jw%202.0.8.css' rel='stylesheet'/> 
 
 	<title>KHMER7HD</title>
 
