--- a/KHBOXHD 4bia.html
+++ b/KHBOXHD 4bia.html
@@ -12,7 +12,7 @@
 
     <link href='https://raw.githack.com/Neasreyka/Admin-logo/main/jw%202.0.8.css' rel='stylesheet'/> 
 
-	<title>KHBOXHD.COM</title>
+	<title>KHMER7HD</title>
 
 	</head>
 
@@ -94,9 +94,9 @@
 
     {
 
-      title: "khboxhd.com",
+      title: "KHMER7HD",
 
-      description: "ភាពយន្តនេះនាំមកជូនដោយ khboxhd.com",
+      description: "ភាពយន្តនេះនាំមកជូនដោយ KHMER7HD",
 
       image: "",
 
